--- a/templates/add.html
+++ b/templates/add.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-{% from 'bootstrap5/form.html' import render_form %}
-{{ render_form(form) }}
+<div class="container-sm">
+  {% from 'bootstrap5/form.html' import render_form %}
+  {{ render_form(form) }}
+</div>
 {% endblock %}
