--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
           {{ render_nav_item('add', 'Add') }}
       </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding-top:10px;padding-bottom:10px">
   {% block content %}{% endblock %}
   </div>
   {{ bootstrap.load_js() }}
