some qol improvements

--- a/templates/add.html
+++ b/templates/add.html
@@ -3,5 +3,9 @@
 <div class="container-sm">
   {% from 'bootstrap5/form.html' import render_form %}
   {{ render_form(form) }}
+  
+</div>
+<div class="container-sm" style="padding-top:10px">
+  <a href="/" class="card-link"><button type="button" class="btn btn-danger">Cancel</button></a>
 </div>
 {% endblock %}
