--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,21 @@
 </head>
 <body>
   {% from 'bootstrap5/nav.html' import render_nav_item %}
-  <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
-          {{ render_nav_item('index', 'Home') }}
-          {{ render_nav_item('add', 'Add') }}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              {{ render_nav_item('index', '/') }}
+            </li>
+            <li class="nav-item">
+              {{ render_nav_item('add', 'Add') }}
+            </li>
+          </ul>
+        </div>
       </div>
   </nav>
   <div class="container-fluid" style="padding-top:10px;padding-bottom:10px">
